--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <div class="children">
         <button class="btn_KSAplay">Play</button>
       </div>
+      <div class="children">
+        <button class="btn_Navarog21">Hover me</button>
+      </div>
     </div>
   </body>
 </html>
