--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
           </span>
         </button>
       </div>
+      <div class="children">
+        <button class="btn-donate">Donate now</button>
+      </div>
     </div>
   </body>
 </html>
